# repoguard

./: .gitignore  README.md  pyproject.toml
src/repoguard/: cli.py  github.py  report.py  utils.py
src/repoguard/scanners/: __init__.py  deps_python.py  secrets.py  workflows.py
tests/: test_smoke.py
