[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoguard"
version = "0.1.0"
description = "Fast GitHub repo risk scanner: secrets + workflows + (optional) Python CVEs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
]

[project.scripts]
repoguard = "repoguard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]